# shortage-rs

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: clippy.yml
src/: app.rs  auth.rs  main.rs  oauth.rs  templates.rs
templates/: base.html  login.html  registered.html
