[package]
name = "shortage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
axum-login = "0.12.0"
axum-macros = "0.4"
oauth2 = "4.4.2"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }

anyhow = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
once_cell = "1.19.0"
parking_lot = "0.12.1"
rand = "0.8.5"
thiserror = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
